# cpp-lib-template

./: .clang-format  CMakeLists.txt
tests/: test.cpp
